Fix crostini value in Storage Settings so it always shows a value

This change fixes a bug where the value for
Settings > Device > Storage Management > Linux (Beta) storage
shows as 0 when the Termina container is not running.

Bug: 888795
Change-Id: I6ab468bc6cca5cdf786e226517ecc25c971061ec
Reviewed-on: https://chromium-review.googlesource.com/c/1260608
Commit-Queue: Renée Wright <rjwright@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597019}
Former-commit-id: ba3467b537872d5dabb596f03bdd830015fff16f